# GithubActionsDemo

./: adminInfo.txt  db.sqlite3  hello.py  pyproject.toml
.github/workflows/: django.yml
mysite/: settings.py
polls/: tests.py  views.py
polls/migrations/: 0001_initial.py
