[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["django-iori <iori4321999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"
django = "^4.2.5"
openai = "^0.28.0"
environ = "^1.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
