[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["django-iori <iori4321999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"
django = "^4.2.5"
openai = "^0.28.0"
environ = "^1.0"
django-environ = "^0.11.2"
gunicorn = "^21.2.0"
boto3 = "^1.28.57"
watchtower = "^3.0.1"
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
